--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 spring:
-  security:
-    user:
-      name: user
-      password: qwerty
+  liquibase:
+    change-log: classpath:db/master.xml
+  h2:
+    console:
+      enabled: true
+  datasource:
+    url: jdbc:h2:mem:${DB_NAME}
+  jpa:
+    show-sql: true
