--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: it-events-app
     build:
       context: .
+    image: patrykdepka/it-events-app
     ports:
       - "8080:8080"
     environment:
